syntax/tests/parsing/errors/structure/gh16A.res
module C = {
  module T = Fun({
      foo(a + c, b + d)
  })
}
)
Js.log("test"); // Is omitted from the compiled JS
